@startuml

package "utility"
{

class ID 
{
     * ID is a class that represents a unique identifier.
     * It has a 64-bit unsigned integer (bits) that encodes both the ID and generation.

    + ID(): void
     * @brief : Construct a new ID object as invalid

    + ID(uint32_t id, uint32_t gen): void
     * @brief : Construct a new ID object with the given ID and generation
     * @param id : The unique identifier for the id
     * @param generation : The generation number for the id

    + ~ID() = default
     * @brief : No special cleanup is needed for the ID object

    + uint32_t GetID() const
     * @brief : Get the ID of the id
     * @return uint32_t : The number representing the ID

    + uint32_t GetGen() const
     * @brief : Get the generation of the id
     * @return uint32_t : The number representing the generation

    + bool IsValid() const
     * @brief : Check if the id is valid
     * @return true : If the id is valid
     * @return false : If the id is invalid

    + uint64_t GetBits() const
     * @brief : Get the encoded bits representing the id
     * @return uint64_t : The encoded bits of the id

    + bool operator==(const ID& other) const
     * @brief : Equality operator to compare two ID objects
     * @param other : The other ID object to compare with
     * @return true : If both ID objects are equal
     * @return false : If the ID objects are not equal

    + bool operator!=(const ID& other) const
     * @brief : Inequality operator to compare two ID objects
     * @param other : The other ID object to compare with
     * @return true : If both ID objects are not equal
     * @return false : If the ID objects are equal

    + bool operator<(const ID& other) const
     * @brief : Less-than operator to compare two ID objects
     * @param other : The other ID object to compare with
     * @return true : If this ID object is less than the other
     * @return false : If this ID object is not less than the other

    ---
    - bits_: uint64_t
     * The 64-bit unsigned integer that encodes both the ID and generation

    {static} - constexpr unsigned VALID_SHIFT = 0
    {static} - constexpr unsigned ID_SHIFT = 1
    {static} - constexpr unsigned GEN_SHIFT = 32
     * Bit shifts for encoding and decoding the id information

    {static} - constexpr uint64_t VALID_MASK = uint64_t{1} << VALID_SHIFT
    {static} - constexpr uint64_t ID_MASK = (uint64_t{1} << 31) - 1
    {static} - constexpr uint64_t GEN_MASK = (uint64_t{1} << 32) - 1
     * Bit masks for encoding and decoding the id information

    - uint64_t MakeBits(uint32_t id, uint32_t gen, bool valid) const
     * @brief : Encode the id information into a 64-bit unsigned integer
     * @param id : The unique identifier for the id
     * @param gen : The generation number for the id
     * @param valid : Whether the id is valid or not
     * @return uint64_t : The encoded bits representing the id
}

class NonCopyable
{
    * Copy Prohibited Mix-in

    + NonCopyable() = default
    + ~NonCopyable() = default
    + NonCopyable(const NonCopyable&) = delete
    + NonCopyable& operator=(const NonCopyable&) = delete
}

class Singleton
{
    * Template class for creating singleton instances of a given type

    + Singleton()
     * @brief : Construct a new Singleton object with the default constructor of the type T
     * Cast to accommodate offset changes during multiple inheritance

    + ~Singleton()
     * @brief : Clean up the singleton instance

    + {static} T& GetInstance()
     * @brief : Get the singleton instance of type T
     * @return T& : Reference to the singleton instance of type T
    
    + {static} bool IsInstantiated()
     * @brief : Check if the singleton instance has been instantiated
     * @return true : If the singleton instance has been instantiated
     * @return false : If the singleton instance has not been instantiated
    ---
    - {static} inline T* instance_ = nullptr
     * @brief : Static pointer to hold the singleton instance of type T
}
NonCopyable <|-- Singleton

}

package "job"
{

class JobState
{
     * Class representing the state of a job
     * This class is used internally by JobHandle to manage job completion

    + JobState(): void
     * @brief : Construct a new JobState object with default values

    + ~JobState() = default
     * @brief : No special cleanup is needed for the JobState object

    + void MarkCompleted()
     * @brief : Mark the job as completed and notify all waiting threads
    ---
    - std::atomic<bool> completed_{false}
     * @brief : Atomic flag to indicate whether the job is completed

    - std::condition_variable cv_ = {}
     * @brief : Condition variable to notify waiting threads

    - std::mutex mutex_ = {}
     * @brief : Mutex to protect access to the condition variable
}

class JobHandle
{
    * Handle for a scheduled job
    * Allows waiting for job completion

    + JobHandle(std::shared_ptr<JobState> state)
    * @brief : Construct a new JobHandle object with the given job state
    * @param state : A shared pointer to the JobState object that manages the job's completion

    + ~JobHandle() = default
     * @brief : No special cleanup is needed for the JobHandle object

    + void Wait()
     * @brief : Wait for the job to be completed
    ---
    - std::shared_ptr<JobState> state_
     * @brief : Shared pointer to the JobState object that manages the job's completion
}
JobHandle o-- JobState

class Job
{
    + JobFunc = std::function<void()>
     * @brief : Alias for the job function type
    
    + Job(JobFunc func)
     * @brief : Construct a new Job object with the given job function
     * @param func : The function to be executed as part of the job

    + void Execute()
     * @brief : Execute the job function
    ---
    - JobFunc func_
     * @brief : The function to be executed as part of the job
}

class JobSet
{
     * Set representing a scheduled job along with its state

    + JobSet(Job job, std::shared_ptr<JobState> state)
     * @brief : Construct a new JobSet object with the given job and job state
     * @param job : The job to be executed
     * @param state : A shared pointer to the JobState object that manages the job's completion

    + Job job_
    + std::shared_ptr<JobState> state_
}
JobSet *-- Job
JobSet o-- JobState

class JobScheduler
{
    + JobScheduler(uint32_t num_worker_threads)
     * @brief : Construct a new JobScheduler object
     * @param num_worker_threads : The number of worker threads to use for scheduling jobs

    + ~JobScheduler()
     * @brief : Worker threads will be joined and cleaned up

    + JobHandle ScheduleJob(Job job)
     * @brief : Schedule a job for execution
     * @param job : The job to be scheduled
     * @return JobHandle : A handle that can be used to track the scheduled job
    ---
    - std::queue<std::unique_ptr<JobSet>> job_queue_
     * @brief : Queue to hold scheduled jobs

    - std::mutex mutex_
     * @brief : Mutex to protect access to the job queue

    - std::condition_variable cv_
     * @brief : Condition variable to notify worker threads of new jobs

    - std::atomic<bool> stop_flag_{false}
     * @brief : Atomic flag to signal the worker thread to stop

    - std::vector<std::thread> worker_threads_
     * @brief : Worker threads for processing jobs

    - void Work()
     * @brief : Worker function that processes jobs from the queue
}
JobScheduler *-- JobSet
JobScheduler ..> JobHandle

}

package "reflection"
{

class ReflectionField
{
    + ReflectionField(std::string_view name, size_t offset)
     * @brief : Construct a new ReflectionField object with the given name and offset
     * @param name : The name of the field
     * @param offset : The byte offset of the field within the class
    
    + {virtual} ~ReflectionField() = default
     * @brief : Virtual destructor for proper cleanup of derived classes
    
    + std::string_view GetName() const
     * @brief : Get the name of the field
     * @return std::string_view : The name of the field
    
    + size_t GetOffset() const
     * @brief : Get the byte offset of the field within the class
     * @return size_t : The byte offset of the field
    
    + {virtual} std::string_view GetTypeName()
     * @brief : Get the name of the field's type
     * @return std::string_view : The name of the field's type

    + {virtual} std::any GetValue(std::byte* instance) const
     * @brief : Get the value of the field from a given instance
     * @param instance : A pointer to the instance from which to retrieve the field's value
     * @return std::any : The value of the field wrapped in a std::any

    + {virtual} void SetValue(std::byte* instance, const std::any& value) const
     * @brief : Set the value of the field for a given instance
     * @param instance : A pointer to the instance for which to set the field's value
     * @param value : The new value for the field wrapped in a std::any
    ---
    # std::string name_
    # size_t offset_
}

class ReflectionFieldType
{
     * Template class representing a reflection field of a specific type
     * Inherits from ReflectionField and provides type-specific implementations for getting and setting field values
}

ReflectionField <|-- ReflectionFieldType

class Reflection
{
    + Reflection(std::byte* instance, std::vector<std::unique_ptr<ReflectionField>> fields)
     * @brief : Construct a new Reflection object with the given instance's pointer and fields
     * @param instance : A pointer to the instance being reflected
     * @param fields : A vector of unique pointers to ReflectionField objects representing the fields of the instance

    + std::any GetFieldValue(std::string_view field_name) const
     * @brief : Get the value of a field by its name
     * @param field_name : The name of the field to retrieve the value of
     * @return std::any : The value of the field wrapped in a std::any

    + void SetFieldValue(std::string_view field_name, const std::any& value)
     * @brief : Set the value of a field by its name
     * @param field_name : The name of the field to set the value of
     * @param value : The new value for the field wrapped in a std::any

    + std::string_view GetFieldTypeName(std::string_view field_name) const
     * @brief : Get the type name of a field by its name
     * @param field_name : The name of the field to retrieve the type name of
     * @return std::string_view : The type name of the field

    + std::vector<std::string> GetFieldNames() const
     * @brief : Get a list of all field names in the reflected instance
     * @return std::vector<std::string> : A vector containing the names of all fields
    ---
    - std::byte* instance_
    - std::unordered_map<std::string, std::unique_ptr<ReflectionField>> fields_
}

Reflection *-- ReflectionField

}

@enduml